--- a/BSH8YS6GFS6/index.html
+++ b/BSH8YS6GFS6/index.html
@@ -155,7 +155,7 @@ src="https://www.facebook.com/tr?id=743321531624419&ev=PageView&noscript=1"
 
     if (totalSeconds <= 0) {
       clearInterval(timer);
-      window.location.href = redirectUrl;
+      //window.location.href = redirectUrl;
     }
 
     totalSeconds--;
